--- a/src/components/FourthGame/FourthGame.css
+++ b/src/components/FourthGame/FourthGame.css
@@ -2,7 +2,7 @@
     display:grid;
     place-items: center;
     justify-content: center;
-    grid-template-columns: repeat(4, 100px);
+    grid-template-columns: repeat(4,  1fr);
     gap: 10px;
     position: relative;
 
@@ -54,4 +54,12 @@
     100% {
        opacity: 0;
     }
+}
+
+@media (width <= 700px) {
+
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
 }
